--- a/src/index.html
+++ b/src/index.html
@@ -9,5 +9,18 @@
 <body>
     <h1>This is a file served by the ultimate server</h1>
     <h2>It is omnipotent AF.</h2>
+    <div style="width:500px;height:500px;left:300px;position:relative;">
+        <iframe src="https://giphy.com/embed/9JcxraSivi1jrTrsxx" 
+            width="100%" 
+            height="100%" 
+            style="position:absolute" 
+            frameBorder="0" 
+            class="giphy-embed" 
+            allowFullScreen>
+        </iframe>
+    </div>
+    <p>
+        <a href="https://giphy.com/gifs/whotels-w-hotels-worldwide-wake-up-call-festival-9JcxraSivi1jrTrsxx">via GIPHY</a>
+    </p>
 </body>
 </html>
